[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
ria = "ria.ria:main_entry_point"

[project]
name = "ria"
version = "0.1.0"
description = "knowledge-Rich Intelligent Agents (RIA) - A Multi-Agent AI System"
requires-python = ">=3.12"
dependencies = [
    "langchain_mcp_adapters",
    "langchain_ollama",
    "deepagents",
    "streamlit",
    "oci",
    "jupyter",
    "ipykernel",
]
